@@ -1,3 +1,7 @@
+2010-04-16 HUANG Wei <wei.kukey@gmail.com>
+
+    * Add Audacity, a music editor.
+
 2010-04-11 MA Yue <velly.empire@gmail.com>
 
     * Add Acire, a Python code fragment manager.
